added new changes

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
         <div class="home-banner" id="home">
             <ul>
-                <li><img alt="css3" src="./images/EXTERIOR_01.jpg">
+                <li><img alt="css3" src="./images/evolveBanner-01.jpg">
                 </li>
-                <li><img alt="" src="./images/EXTERIOR_EVE.jpg">
+                <li><img alt="" src="./images/evolveBanner-02.jpg">
                 </li>
-                <li><img alt="" src="./images/AERIAL VIEWS.jpg">
+                <li><img alt="" src="./images/evolveBanner-03.jpg">
                 </li>
-                <li><img alt="css3" src="./images/EXTERIOR_01.jpg">
+                <li><img alt="css3" src="./images/evolveBanner-04.jpg">
                 </li>
 
             </ul>
@@ -556,10 +556,10 @@
 
     </footer> 
     
-    <!-- Footer end -->
 
 
-    <!-- Javascript Files
+
+
   ================================================== -->
 
     <!-- initialize jQuery Library -->
