--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <div class="home-logo">
-            <img src="./images/evolvelogo-24.png" alt="" class="img-fluid">
+            <img src="./images/Evolve logo-05.png" alt="" class="img-fluid">
         </div>
 
         <div class="home-banner" id="home">
