--- a/index.html
+++ b/index.html
@@ -62,16 +62,10 @@
 
         <section id="overview" class="main-container ">
 
-
-
             <div class="evolve-ab">
-
                 <div class="cashmeer-ab-banner">
                     <img loading="lazy" src="images/AERIAL VIEWS.jpg" alt="">
                 </div>
-
-
-
                 <div class="cashmeer-icon">
 
                     <h5>
@@ -92,8 +86,55 @@
                 </div>
             </div>
 
+            <div class="site-overview">
 
+                <div class="container">
+                    
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span>1 Acre</span>
+                                <p>Site Area</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span> G+10 Floors</span>
+                                <p>Structure</p>
+                            </div>
+                        </div>
 
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span> G+10 Floors</span>
+                                <p>Structure</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span> G+10 Floors</span>
+                                <p>Structure</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span> G+10 Floors</span>
+                                <p>Structure</p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span> G+10 Floors</span>
+                                <p>Structure</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
 
 
     </div><!-- Row end -->
@@ -190,296 +231,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-
-    <section id="speci" class="plan-bg">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-12">
-                    <!-- <h2 class="section-title">Work of Excellence</h2> -->
-                    <h3 class="section-sub-title">Specifications</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="accordion" id="accordionExample">
-                        <div class="item">
-                            <div class="item-header" id="headingOne">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link" type="button" data-toggle="collapse"
-                                        data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                        STRUCTURE
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <li>R. C. C. framed structure.
-                                        </li>
-                                        <li>
-
-                                            Earthquake resistance foundation.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="headingTwo">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        SUPER STRUCTURE
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <li>Quality brick work in cement mortar.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="headingThree">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
-                                        PLASTERING
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <li>Internal double coat of cement for smooth finish.</li>
-                                        <li>External double coat in sand faced cement.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="headingFour">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                        DOORS
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <li>
-                                            <strong>Main door:</strong>B.T. Wood frame and shutter aesthetically
-                                            designed with melamine polishing and designer hard ware.
-                                        </li>
-                                        <li>
-                                            <strong>Internal doors:</strong> B.T. Wood frame with Polished Masonite
-                                            flush shutters.
-                                        </li>
-                                        <li>
-                                            <strong>Windows:</strong>uPVC window with provision for mosquito mesh.
-
-                                        </li>
-                                        <li>
-                                            <strong>Grills:</strong> Enamel painted designed and fixed at extra
-                                            cost.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="headingFive">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                        PAINTING
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapseFive" class="collapse" aria-labelledby="headingFive"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <li>
-                                            <strong>External:</strong>Texture based paint / emulsion paints of Asian
-                                            / ICI make.
-                                        </li>
-                                        <li>
-                                            <strong>Internal:</strong> Two coats of Acrylic emulsion paints over a
-                                            coat of primer.
-                                        </li>
-                                        <li>
-                                            <strong>Ceiling:</strong>Two coats of Acrylic emulsion paints over a
-                                            coat of primer.
-
-                                        </li>
-                                        <li>
-                                            <strong>Servant Quarters & Service Areas:</strong> E Two coats of
-                                            acrylic OBC over one coat of primer if applicable.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="accordion" id="accordionExample">
-                        <div class="item">
-                            <div class="item-header" id="headingsix">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapsesix" aria-expanded="false" aria-controls="collapsesix">
-                                        FLOORING
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapsesix" class="collapse" aria-labelledby="headingsix"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <p>Vitrified porcelain tiles branded or equivalent make in bedrooms, living,
-                                            drawing, dining and staircase (800 x 800 mm)</p>
-                                        <li>
-                                            <strong>Bathrooms:</strong>Anti skid finish vetrified tiles (600 x 600
-                                            mm).
-                                        </li>
-                                        <li>
-                                            <strong>Balconies:</strong> Clay or ceramic tiles (300 x 300 mm).
-                                        </li>
-                                        <li>
-                                            <strong>Utility:</strong>Anti skid ceramic tiles (300 x 300 mm).
-
-                                        </li>
-
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="heading1">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                        TILE CLADDING & DADOING
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapse1" class="collapse" aria-labelledby="heading1"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-                                        <p>
-                                            <strong>Kitchen:</strong>
-                                        </p>
-                                        <li>
-                                            Glazed ceramic tile dado up to 2′ height above kitchen platform (300 x
-                                            450 mm).
-                                        </li>
-                                        <li>
-                                            Granite will be provided for platform
-                                        </li>
-                                        <li>
-                                            Provision for cabinets, exhaust fan and chimney.
-                                        </li>
-
-                                    </ul>
-                                    <ul>
-                                        <p>
-                                            <strong>Utility/Wash:</strong>
-                                        </p>
-                                        <li>
-                                            Anti skid ceramic tiles (300 x 300 mm).
-                                        </li>
-                                        <li>
-                                            Provision for washing machine, dishwasher & wet area for washing
-                                            utensils.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="item-header" id="heading2">
-                                <h2 class="mb-0">
-                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                        data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                        TOILETS
-                                        <i class="fa fa-angle-down"></i>
-                                    </button>
-                                </h2>
-                            </div>
-                            <div id="collapse2" class="collapse" aria-labelledby="heading2"
-                                data-parent="#accordionExample">
-                                <div class="t-p">
-                                    <ul>
-
-                                        <li>
-                                            Designer Vitrified Tile dado of Johnson / Bell or equivalent make up to
-                                            7′ height (300 x 600 mm). </li>
-                                        <li>
-                                            Washbasin with hot and cold mixer value.
-                                        </li>
-                                        <li>
-                                            All Sanitary used of Duravit/Vitra make or equivalent.
-                                        </li>
-                                        <li>
-                                            Hot and cold wall mixer with shower.
-                                        </li>
-                                        <li>
-                                            All C.P. Fittings of chrome plated of Grohe or equivalent make.
-                                        </li>
-
-                                    </ul>
-                                    <ul>
-                                        <p>
-                                            <strong>Utility/Wash:</strong>
-                                        </p>
-                                        <li>
-                                            Anti skid ceramic tiles (300 x 300 mm).
-                                        </li>
-                                        <li>
-                                            Provision for washing machine, dishwasher & wet area for washing
-                                            utensils.
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-
-
-    </section>
-
-    <section id="location">
-        <div class="container">
-            <iframe class="cashmeer-map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121803.32004935389!2d78.24529334959895!3d17.44277463085294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb90e6a0438081%3A0x52e024b4e41c0bfc!2sCadol%20Group%20-%20Real%20Estate%20Company!5e0!3m2!1sen!2sin!4v1626439178482!5m2!1sen!2sin"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </section>
 
