--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- Banner area end -->
 
-        <section id="overview" class="main-container ">
+        <div id="overview" class="main-container ">
 
             <div class="evolve-ab">
                 <div class="cashmeer-ab-banner">
@@ -89,9 +89,9 @@
             <div class="site-overview">
 
                 <div class="container">
-                    
+
                     <div class="row">
-                        <div class="col-sm-2">
+                        <div class="col-sm-1">
                             <div class="overview-list">
                                 <span>1 Acre</span>
                                 <p>Site Area</p>
@@ -106,29 +106,29 @@
 
                         <div class="col-sm-2">
                             <div class="overview-list">
-                                <span> G+10 Floors</span>
-                                <p>Structure</p>
+                                <span> ---</span>
+                                <p>Number of Units </p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-2">
+                            <div class="overview-list">
+                                <span>2 & 3 BHK </span>
+                                <p> Apartments Type</p>
                             </div>
                         </div>
 
                         <div class="col-sm-2">
                             <div class="overview-list">
                                 <span> G+10 Floors</span>
-                                <p>Structure</p>
+                                <p>Apartments Range</p>
                             </div>
                         </div>
 
-                        <div class="col-sm-2">
+                        <div class="col-sm-3">
                             <div class="overview-list">
-                                <span> G+10 Floors</span>
-                                <p>Structure</p>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2">
-                            <div class="overview-list">
-                                <span> G+10 Floors</span>
-                                <p>Structure</p>
+                                <span> Outdoors, Indoors & Terrace</span>
+                                <p>Amenities</p>
                             </div>
                         </div>
 
@@ -137,105 +137,126 @@
             </div>
 
 
-    </div><!-- Row end -->
-
-    <!-- Conatiner end -->
-    </section><!-- Main container end -->
+            <!-- Conatiner end -->
+        </div><!-- Main container end -->
 
 
 
-    <div class="evolve-back"></div>
+        <div class="evolve-back"></div>
 
+        <section class="plans">
+            <div class="container">
 
-
-
- 
-
-    <section id="clubhouse" class="main-container">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-12">
-                    <!-- <h2 class="section-title">Work of Excellence</h2> -->
-                    <h3 class="section-sub-title">Clubhouse</h3>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="clubhose-details">
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="clubhouse-inner">
-                            <h3>
-                                Clubhouse
-                                Aminities
-                            </h3>
-                            <ul>
-                                <li>
-                                    SWIMMING POLL
-                                </li>
-                                <li>
-                                    GYMNASIUM
-                                </li>
-                                <li>
-                                    SQUASH COURT
-                                </li>
-                                <li>
-                                    INDOOR GAMES
-                                </li>
-                                <li>
-                                    CAFETERIA
-                                </li>
-                                <li>
-                                    BANQUET HALL
-                                </li>
-                                <li>
-                                    GUEST BEDROOM
-                                </li>
-                            </ul>
-                        </div>
+                <div class="row text-center">
+                    <div class="col-lg-12">
+                        <h3 class="section-sub-title">Plans</h3>
                     </div>
-                    <div class="col-sm-8">
-                        <div id="page-slider" class="page-slider small-bg">
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-04.png" alt="project-image" />
-                            </div>
+                </div>
+           
 
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-06.png" alt="project-image" />
-                            </div>
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/GYM Cashmerecourt-07.png" alt="project-image" />
-                            </div>
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-08.png" alt="project-image" />
-                            </div>
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-09.png" alt="project-image" />
-                            </div>
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-10.png" alt="project-image" />
-                            </div>
-                            <div class="item">
-                                <img loading="lazy" class="img-fluid"
-                                    src="images/cadol/court/clubhouse/clubhouse-11.png" alt="project-image" />
-                            </div>
-                        </div>
-
+                <div class="plans-m">
+                    <div class="item">
+                        <img class="img-fluid" src="images/MasterPlan-06.jpg" alt="project-image" />
+                    </div>
+                </div>
+                <hr>
+                <div class="plans-m">
+                    <div class="item">
+                        <img class="img-fluid" src="images/tropicalPlan-07.jpg" alt="project-image" />
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
-    <!-- <footer id="footer" class="footer bg-overlay">
+
+
+        <section id="clubhouse" class="main-container">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-lg-12">
+                        <!-- <h2 class="section-title">Work of Excellence</h2> -->
+                        <h3 class="section-sub-title">Clubhouse</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="clubhose-details">
+
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <div class="clubhouse-inner">
+                                <h3>
+                                    Clubhouse
+                                    Aminities
+                                </h3>
+                                <ul>
+                                    <li>
+                                        SWIMMING POLL
+                                    </li>
+                                    <li>
+                                        GYMNASIUM
+                                    </li>
+                                    <li>
+                                        SQUASH COURT
+                                    </li>
+                                    <li>
+                                        INDOOR GAMES
+                                    </li>
+                                    <li>
+                                        CAFETERIA
+                                    </li>
+                                    <li>
+                                        BANQUET HALL
+                                    </li>
+                                    <li>
+                                        GUEST BEDROOM
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div id="page-slider" class="page-slider small-bg">
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-04.png" alt="project-image" />
+                                </div>
+
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-06.png" alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/GYM Cashmerecourt-07.png"
+                                        alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-08.png" alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-09.png" alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-10.png" alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img loading="lazy" class="img-fluid"
+                                        src="images/cadol/court/clubhouse/clubhouse-11.png" alt="project-image" />
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- <footer id="footer" class="footer bg-overlay">
         <div class="footer-main">
             <div class="container">
                 <div class="row justify-content-between">
@@ -313,34 +334,34 @@
 
   ================================================== -->
 
-    <!-- initialize jQuery Library -->
-    <script src="plugins/jQuery/jquery.min.js"></script>
-    <!-- Bootstrap jQuery -->
-    <script src="plugins/bootstrap/bootstrap.min.js" defer></script>
-    <!-- Slick Carousel -->
-    <script src="plugins/slick/slick.min.js"></script>
-    <script src="plugins/slick/slick-animation.min.js"></script>
-    <!-- Color box -->
-    <script src="plugins/colorbox/jquery.colorbox.js"></script>
-    <!-- shuffle -->
-    <!-- <script src="plugins/shuffle/shuffle.min.js" defer></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
+        <!-- initialize jQuery Library -->
+        <script src="plugins/jQuery/jquery.min.js"></script>
+        <!-- Bootstrap jQuery -->
+        <script src="plugins/bootstrap/bootstrap.min.js" defer></script>
+        <!-- Slick Carousel -->
+        <script src="plugins/slick/slick.min.js"></script>
+        <script src="plugins/slick/slick-animation.min.js"></script>
+        <!-- Color box -->
+        <script src="plugins/colorbox/jquery.colorbox.js"></script>
+        <!-- shuffle -->
+        <!-- <script src="plugins/shuffle/shuffle.min.js" defer></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
 
 
 
-    <script src="js/script.js"></script>
-    <script>
-        $(function () {
-            $('.popup-youtube').magnificPopup({
-                disableOn: 700,
-                type: 'iframe',
-                mainClass: 'mfp-fade',
-                removalDelay: 160,
-                preloader: false,
-                fixedContentPos: false
+        <script src="js/script.js"></script>
+        <script>
+            $(function () {
+                $('.popup-youtube').magnificPopup({
+                    disableOn: 700,
+                    type: 'iframe',
+                    mainClass: 'mfp-fade',
+                    removalDelay: 160,
+                    preloader: false,
+                    fixedContentPos: false
+                });
             });
-        });
-    </script>
+        </script>
 
 
     </div><!-- Body inner end -->
