--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 
 
-        <section id="clubhouse" class="main-container">
+        <section id="clubhouse" class="main-container site-clubhouse">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
@@ -219,21 +219,21 @@
                             <div id="page-slider" class="page-slider small-bg">
                                 <div class="item">
                                     <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-04.png" alt="project-image" />
+                                        src="images/evolveBanner-01.jpg" alt="project-image" />
                                 </div>
 
                                 <div class="item">
                                     <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-06.png" alt="project-image" />
+                                        src="images/evolveBanner-02.jpg" alt="project-image" />
                                 </div>
                                 <div class="item">
                                     <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/GYM Cashmerecourt-07.png"
+                                        src="images/evolveBanner-03.jpg"
                                         alt="project-image" />
                                 </div>
                                 <div class="item">
                                     <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-08.png" alt="project-image" />
+                                        src="images/evolveBanner-04.jpg" alt="project-image" />
                                 </div>
                                 <div class="item">
                                     <img loading="lazy" class="img-fluid"
@@ -255,6 +255,10 @@
             </div>
         </section>
 
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, amet!
+        </p>
 
         <!-- <footer id="footer" class="footer bg-overlay">
         <div class="footer-main">
