--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <!-- CSS
 ================================================== -->
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="plugins/fontawesome/css/all.min.css">
     <!-- Animation -->
@@ -30,7 +32,7 @@
     <link rel="stylesheet" href="plugins/slick/slick.css">
     <link rel="stylesheet" href="plugins/slick/slick-theme.css">
     <!-- Colorbox -->
-    <link rel="stylesheet" href="plugins/colorbox/colorbox.css">
+    <!-- <link rel="stylesheet" href="plugins/colorbox/colorbox.css"> -->
     <!-- Template styles-->
     <link rel="stylesheet" href="css/style.css">
 
@@ -39,12 +41,49 @@
 <body style="background-color: #F2F1EE;">
     <div class="body-inner">
 
-
-        <div class="home-logo">
-            <img src="./images/Evolve logo-05.png" alt="" class="img-fluid">
+        <div class="site-mobile-menu site-navbar-target">
+            <div class="site-mobile-menu-header">
+                <div class="site-mobile-menu-close mt-3">
+                    <span class="icon-close2 js-menu-toggle"></span>
+                </div>
+            </div>
+            <div class="site-mobile-menu-body"></div>
         </div>
 
-        <div class="home-banner" id="home">
+
+        <header class="site-navbar js-sticky-header site-navbar-target" role="banner">
+
+            <div class="container">
+                <div class="row align-items-center">
+
+                    <div class="col-6 col-xl-2">
+                        <!-- <h1 class="mb-0 site-logo"><a href="index.html">Brand<span class="text-primary">.</span> </a></h1> -->
+                        <img src="/images/Evolve logo-05.png" alt="" class="img-fluid">
+                    </div>
+
+                    <div class="col-12 col-md-10 d-none d-xl-block">
+                        <nav class="site-navigation position-relative text-right" role="navigation">
+
+                            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                                <li class="active"><a href="#home-section" class="nav-link">Home</a></li>
+                                <li><a href="#overview-section" class="nav-link">Overview</a></li>
+                                <li><a href="#plan-section" class="nav-link">Plans</a></li>
+                                <li><a href="#club-section" class="nav-link">Clubhouse</a></li>
+
+                                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+
+
+                    <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a
+                            href="#" class="site-menu-toggle js-menu-toggle float-right"><span
+                                class="icon-menu h3"></span></a></div>
+                </div>
+            </div>
+        </header>
+
+        <div class="home-banner" id="home-section">
             <ul>
                 <li><img alt="css3" src="./images/evolveBanner-01.jpg">
                 </li>
@@ -59,8 +98,7 @@
         </div>
 
         <!-- Banner area end -->
-
-        <div id="overview" class="main-container ">
+        <div id="overview-section" class="main-container ">
 
             <div class="evolve-ab">
                 <div class="cashmeer-ab-banner">
@@ -140,11 +178,9 @@
             <!-- Conatiner end -->
         </div><!-- Main container end -->
 
-
-
         <div class="evolve-back"></div>
 
-        <section class="plans">
+        <section class="plans" id="plan-section">
             <div class="container">
 
                 <div class="row text-center">
@@ -152,7 +188,7 @@
                         <h3 class="section-sub-title">Plans</h3>
                     </div>
                 </div>
-           
+
 
                 <div class="plans-m">
                     <div class="item">
@@ -168,14 +204,10 @@
             </div>
         </section>
 
-
-
-
-        <section id="clubhouse" class="main-container site-clubhouse">
+        <section id="club-section" class="main-container site-clubhouse">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
-                        <!-- <h2 class="section-title">Work of Excellence</h2> -->
                         <h3 class="section-sub-title">Clubhouse</h3>
                     </div>
                 </div>
@@ -197,9 +229,7 @@
                                     <li>
                                         GYMNASIUM
                                     </li>
-                                    <li>
-                                        SQUASH COURT
-                                    </li>
+
                                     <li>
                                         INDOOR GAMES
                                     </li>
@@ -218,35 +248,27 @@
                         <div class="col-sm-8">
                             <div id="page-slider" class="page-slider small-bg">
                                 <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/evolveBanner-01.jpg" alt="project-image" />
+                                    <img class="img-fluid" src="images/exterior-17.jpg" alt="project-image" />
+                                </div>
+                                <div class="item">
+                                    <img class="img-fluid" src="images/GYM.jpg" alt="project-image" />
                                 </div>
 
                                 <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/evolveBanner-02.jpg" alt="project-image" />
+                                    <img class="img-fluid" src="images/INDOOR GAME.jpg" alt="project-image" />
                                 </div>
                                 <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/evolveBanner-03.jpg"
-                                        alt="project-image" />
+                                    <img class="img-fluid" src="images/MULTIPURPOSE HALL-1.jpg" alt="project-image" />
                                 </div>
+
                                 <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/evolveBanner-04.jpg" alt="project-image" />
+                                    <img class="img-fluid" src="images/exterior-16.jpg" alt="project-image" />
                                 </div>
+
                                 <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-09.png" alt="project-image" />
+                                    <img class="img-fluid" src="images/exterior-18.jpg" alt="project-image" />
                                 </div>
-                                <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-10.png" alt="project-image" />
-                                </div>
-                                <div class="item">
-                                    <img loading="lazy" class="img-fluid"
-                                        src="images/cadol/court/clubhouse/clubhouse-11.png" alt="project-image" />
-                                </div>
+
                             </div>
 
                         </div>
@@ -256,9 +278,7 @@
         </section>
 
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, amet!
-        </p>
+
 
         <!-- <footer id="footer" class="footer bg-overlay">
         <div class="footer-main">
@@ -339,14 +359,17 @@
   ================================================== -->
 
         <!-- initialize jQuery Library -->
-        <script src="plugins/jQuery/jquery.min.js"></script>
+        <!-- <script src="plugins/jQuery/jquery.min.js"></script> -->
         <!-- Bootstrap jQuery -->
-        <script src="plugins/bootstrap/bootstrap.min.js" defer></script>
+        <!-- <script src="plugins/bootstrap/bootstrap.min.js" defer></script> -->
+        <script src="js/jquery-3.3.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/jquery.sticky.js"></script>
         <!-- Slick Carousel -->
         <script src="plugins/slick/slick.min.js"></script>
         <script src="plugins/slick/slick-animation.min.js"></script>
         <!-- Color box -->
-        <script src="plugins/colorbox/jquery.colorbox.js"></script>
+        <!-- <script src="plugins/colorbox/jquery.colorbox.js"></script> -->
         <!-- shuffle -->
         <!-- <script src="plugins/shuffle/shuffle.min.js" defer></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
@@ -365,6 +388,7 @@
                     fixedContentPos: false
                 });
             });
+
         </script>
 
 
