added new changes

--- a/index.html
+++ b/index.html
@@ -279,6 +279,33 @@
 
 
 
+        <section class="site-inspired">
+            <div class="container">
+                <div class="site-insp-inner">
+
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="evolve-nature-con">
+                                <h1>
+                                    WALK YOUR WAY TO HEALTH
+                                </h1>
+                                <p>
+                                    Take sure steps to healthy living, jog your way through the serene
+                                    environs. Choose between the jogging track and the cycling track in how
+                                    you would like to get fit. Experience fresh & healthy life in the lap of nature
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <div class="evolve-nature-img">
+                                <img src="images/exterior-16.jpg" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- <footer id="footer" class="footer bg-overlay">
         <div class="footer-main">
